[gd_scene load_steps=5 format=3 uid="uid://im5co7o3hpvx"]

[ext_resource type="Script" uid="uid://be7rir4h7f0hx" path="res://Scripts/UI/item_ui.gd" id="1_jga5b"]
[ext_resource type="PackedScene" uid="uid://b2wbmhb6t7k6" path="res://Scenes/UI/animated_item_texture.tscn" id="2_fxgll"]
[ext_resource type="Theme" uid="uid://c5ya2hbdoonmi" path="res://Resources/main_theme.tres" id="4_s6x56"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_crqux"]

[node name="ItemUI" type="PanelContainer"]
script = ExtResource("1_jga5b")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AnimatedItemTexture" parent="HBoxContainer" instance=ExtResource("2_fxgll")]
unique_name_in_owner = true
layout_mode = 2

[node name="QuantityLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_s6x56")
text = "x1"

[node name="AddButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_crqux")
text = "Add"

[connection signal="pressed" from="HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
